modified:   css/style.css 	modified:   data/specialized_skills.json 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   </section>
                   <section class="video-demo">
                         <div class="video-demo-title">
-                              <div>Video demo projects at university</div>
+                              <div>Projects at university</div>
                         </div>
                         <div class="youtube-player-overlay">
                               <div class="my-project-video">
@@ -118,10 +118,8 @@
                               <div class="box-video">
                                     <div class="video-info">
                                           <div class="video-info-left">
-                                                <p>dfadsf</p>
-                                                <p>dfadsf</p>
-                                                <p>dfadsf</p>
-                                                <p>dfadsf</p>
+                                                <p>This e-commerce site, built with Angular, Node.js, and MongoDB, offers product browsing, cart management, purchases, and secure user authentication with a modern UI.</p>
+                                                
                                                 <div class="show-video" data-link="2CkpGk7luu0?si=9dYPeJmfFSKgY_m-">
                                                       Video demo
                                                 </div>
@@ -145,10 +143,8 @@
                               <div class="box-video">
                                     <div class="video-info">
                                           <div class="video-info-left">
-                                                <p>dfadsf</p>
-                                                <p>dfadsf</p>
-                                                <p>dfadsf</p>
-                                                <p>dfadsf</p>
+                                                <p>This Android app, built using Android Studio and Firebase, ensures secure data storage and ease of use. It features a user-friendly interface and data analysis tools for administrators.</p>
+                                                
                                                 <div class="show-video" data-link="3qWg5uTYeuU?si=-EqXAdly_Eo3lB44">
                                                       Video demo
                                                 </div>
