--- a/blog.html
+++ b/blog.html
@@ -2,110 +2,125 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="icon" href="images/avatarmini.png" type="image/png">
-    <title>TranVanNam</title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/cssblog.css">
+      <title>Document</title>
 </head>
 
 <body>
-    <div class="container">
-        <header style="background-image: url(images/bg.png); background-size: 60px 60px;">
-            <img src="./images/avatar.png" alt="Avatar" class="avatar">
-            <p class="name">Van-Nam Tran</p>
-            <p>STUDENT OF UNIVERSITY OF ECONOMICS AND LAW</p>
-            <p>Majors: Managerment Information system</p>
-            <div>
-                <img style="width: 20px;" src="images/location-pin.png" alt="location">
-                <Span>Ho Chi Minh City</Span>
-            </div>
-            <hr>
-            <nav>
-                <ul>
-                    <li>
+      <div class="container">
+            <header>
+                  <div>
+                        <h2 >Blog</h2>
                         <a href="./index.html">
-                            <img src="./images/resume_white.png" alt="resume" class="icon icon-default">
-                            <img src="./images/resume_black.png" alt="resume" class="icon icon-active">
-                            My Profile
+                              <div class="blog">
+                                    <div>About me</div>
+                              </div>
                         </a>
-                    </li>
-                    <!-- <li>
-                        <a href="./knowledge_sharing.html">
-                            <img src="./images/knowledge_white.png" alt="knowledge" class="icon icon-default">
-                            <img src="./images/knowledge_black.png" alt="knowledge" class="icon icon-active">
-                            Knowledge sharing
-                        </a>
-                    </li> -->
-                    <li class="active">
-                        <a href="#">
-                            <img src="./images/blogger_white.png" alt="blog" class="icon icon-default">
-                            <img src="./images/blogger_black.png" alt="blog" class="icon icon-active">
-                            Blog
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <div id="overlay"><span id="closeMenu">&times;</span></div>
-        <button id="scrollToTopBtn" title="Go to top">Top</button>
-        <button id="menu" title="Menu"><img src="images/menu.png" alt="" style="width: 25px;"></button>
-        <main>
-            <h2>My Blog</h2>
-            <!-- <section class="about-me">
-
-            </section> -->
-            <!-- <div class="pdf-container">
-                <iframe src="https://drive.google.com/file/d/1ipqb3l5GFGREIOh0mJkgXESK67QWdVU0/preview" allow="autoplay"></iframe>
-            </div> -->
-
-
-        </main>
-    </div>
-
-    <!-- <script src="./js/functions.js"></script> -->
-    <script>
-        // scroll to top button
-        var scrollToTopBtn = document.getElementById("scrollToTopBtn");
-        window.onscroll = function () { scrollFunction() };
-
-        function scrollFunction() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                scrollToTopBtn.style.display = "block";
-            } else {
-                scrollToTopBtn.style.display = "none";
+                  </div>
+            </header>
+            <button id="scrollToTopBtn" title="Go to top">Top</button>
+           <main>
+            <div class="nav"></div>
+            <article><img src="images/fix.jpeg" alt=""> </article>
+            <div class="sub"></div>
+           </main>
+            <footer>
+                  <hr style="background-color:#6d6d6d; height: 2px;">
+                  <div class="contact">
+                        <div class="img-cute-boy"><img src="images/cuteboy.jpg" alt=""></div>
+                        <div class="contact-box">
+                              <p class="contact-box-title">Contact</p>
+                              <hr style="background-color:#6d6d6d; height: 1px;">
+                              <br>
+                              <div class="contact-box-info" id="email-address">
+                                    <img src="./images/email.png" alt="mail">
+                                    <div><a href="mailto:tranvannamntt@gmail.com" style=""> tranvannamntt@gmail.com</a>
+                                    </div>
+                              </div>
+                              <div class="contact-box-info">
+                                    <img src="./images/phone.png" alt="mail">
+                                    <p>Phone number </br>0366 187 296</p>
+                              </div>
+                              <div class="contact-box-info">
+                                    <img src="images/github.png" alt="mail">
+                                    <p>GitHub </br><a href="https://github.com/VanNamTran"
+                                                target="_blank">https://github.com/VanNamTran</a></p>
+                              </div>
+                        </div>
+                  </div>
+            </footer>
+      </div>
+      <script>
+            var modal = document.getElementById("myModal");
+            var img = document.getElementById("myImg");
+            var modalImg = document.getElementById("img01");
+            var captionText = document.getElementById("caption");
+            img.onclick = function () {
+                  modal.style.display = "block";
+                  modalImg.src = this.src;
+                  captionText.innerHTML = this.alt;
             }
-        }
-
-        scrollToTopBtn.onclick = function () {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-        // Menu
-        var menuBtn = document.getElementById("menu");
-        var header = document.getElementsByTagName("header")[0];
-        var overlay = document.getElementById("overlay");
-        var closeMenu = document.getElementById("closeMenu");
-        menuBtn.onclick = function () {
-            header.classList.toggle("show");
-            overlay.classList.toggle("show");
-            closeMenu.classList.toggle("show");
-        };
-        closeMenu.onclick = function () {
-            header.classList.remove("show");
-            overlay.classList.remove("show");
-            closeMenu.classList.remove("show");
-
-        };
-        window.onresize = function () {
-            if (window.innerWidth > 500) {
-                header.classList.remove("show");
-                overlay.classList.remove("show");
-                closeMenu.classList.remove("show");
+            var span = document.getElementsByClassName("close")[0];
+            span.onclick = function () {
+                  modal.style.display = "none";
             }
-        };
-    </script>
-    <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
+
+            // =========Specialized_skills=========
+            document.addEventListener('DOMContentLoaded', function () {
+                  fetch('./data/specialized_skills.json')
+                        .then(response => response.json())
+                        .then(data => {
+                              const container = document.getElementById('data-specialized-skills');
+                              const template = document.getElementById('data-template');
+
+                              data.forEach(item => {
+                                    const clone = document.importNode(template.content, true);
+
+                                    // Set background image
+                                    clone.querySelector('.background-image img').src = `images/${item.image}`;
+                                    // Set name
+                                    clone.querySelector('.topic-name').textContent = item.name;
+
+
+                                    container.appendChild(clone);
+                              });
+                        })
+                        .catch(error => console.error('Error fetching data:', error));
+            });
+            //=====JavaScript cho nút Scroll to Top =====
+            var scrollToTopBtn = document.getElementById("scrollToTopBtn");
+            window.onscroll = function () { scrollFunction() };
+
+            function scrollFunction() {
+                  if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+                        scrollToTopBtn.style.display = "block";
+                  } else {
+                        scrollToTopBtn.style.display = "none";
+                  }
+            }
+
+            scrollToTopBtn.onclick = function () {
+                  document.body.scrollTop = 0;
+                  document.documentElement.scrollTop = 0;
+            }
+            // youtube-player
+            var YTPlayerOverlay = document.querySelector(".youtube-player-overlay");
+            var YTLinks = document.querySelectorAll(".show-video");
+            var YTPlayerPupup = document.querySelector(".my-project-video iframe");
+            YTLinks.forEach((link) => {
+                  link.addEventListener("click", () => {
+                        YTPlayerOverlay.classList.add("active2");
+                        let videoLink = `https://www.youtube.com/embed/${link.dataset.link}`;
+                        YTPlayerPupup.src = videoLink;
+                  });
+            });
+            YTPlayerOverlay.addEventListener("click", () => {
+                  YTPlayerOverlay.classList.remove("active2");
+            })
+      </script>
 </body>
 
 </html>
