--- a/index.html
+++ b/index.html
@@ -10,26 +10,27 @@
 
 <body>
       <div class="container">
-            <header>
-                  <div>
+            <header id="header">
+                  <div class="header-container">
                         <h2 data-translate="title">Profile</h2>
                         <div style="display: flex;"><a href="./blog.html">
-                              <div class="blog">
-                                    <div>Blog</div>
-                              </div>
-                        </a>
-                        <select id="language-selector">
-                              <option value="en">English</option>
-                              <option value="vi">Tiếng Việt</option>
-                        </select></div>
-                        
+                                    <div class="blog">
+                                          <div>Blog</div>
+                                    </div>
+                              </a>
+                              <select id="language-selector">
+                                    <option value="en">English</option>
+                                    <option value="vi">Tiếng Việt</option>
+                              </select>
+                        </div>
+
                   </div>
             </header>
             <button id="scrollToTopBtn" title="Go to top">
                   <svg class="icon" viewBox="0 -5 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M12 4L6 10L7.41 11.41L12 6.83L16.59 11.41L18 10L12 4Z" fill="currentColor"/>
+                        <path d="M12 4L6 10L7.41 11.41L12 6.83L16.59 11.41L18 10L12 4Z" fill="currentColor" />
                   </svg>
-              </button>
+            </button>
             <main>
                   <section class="introduction">
                         <div class="hello">
