modified:   blog.html 	modified:   css/cssblog.css 	modified:   index.html 	modified:   locales/en.json 	modified:   locales/vi.json

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="css/style.css">
-      <title>TranVanNam</title>
+      <title>Tran Van Nam</title>
 </head>
 
 <body>
@@ -34,13 +34,13 @@
             <main>
                   <section class="introduction">
                         <div class="hello">
-                              <div data-translate="hello">hello!</div>
+                              <div data-translate="hello"></div>
                         </div>
                         <div class="hello-name">
                               <p>
-                                    <span data-translate="introPart1">I’m</span>
-                                    <span data-translate="introName" class="my-name">Tran Van Nam</span>,</br>
-                                    <span data-translate="introPart2">Software Developer</span>
+                                    <span data-translate="introPart1"></span>
+                                    <span data-translate="introName" class="my-name"></span></br>
+                                    <span data-translate="introPart2"></span>
                               </p>
                         </div>
                         <div class="hello-info">
@@ -133,7 +133,6 @@
 
                                                 <div class="show-video" data-translate="showvideo"
                                                       data-link="2CkpGk7luu0?si=9dYPeJmfFSKgY_m-">
-                                                      Video demo
                                                 </div>
                                           </div>
                                           <div class="video-info-right">
@@ -162,7 +161,6 @@
 
                                                 <div class="show-video" data-translate="showvideo"
                                                       data-link="3qWg5uTYeuU?si=-EqXAdly_Eo3lB44">
-                                                      Video demo
                                                 </div>
                                           </div>
                                           <div class="video-info-right">
@@ -226,7 +224,7 @@
                   <div class="contact">
                         <div class="img-cute-boy"><img src="images/cuteboy.jpg" alt=""></div>
                         <div class="contact-box">
-                              <p data-translate="contact" class="contact-box-title">Contact</p>
+                              <p data-translate="contact" class="contact-box-title"></p>
                               <hr style="background-color:#6d6d6d; height: 1px;">
                               <br>
                               <div class="contact-box-info" id="email-address">
