--- a/blog.html
+++ b/blog.html
@@ -6,121 +6,65 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="css/style.css">
       <link rel="stylesheet" href="css/cssblog.css">
-      <title>Document</title>
+      <title>Tran Van Nam</title>
 </head>
 
 <body>
       <div class="container">
-            <header>
-                  <div>
-                        <h2 >Blog</h2>
-                        <a href="./index.html">
-                              <div class="blog">
-                                    <div>About me</div>
-                              </div>
-                        </a>
+            <header id="header">
+                  <div class="header-container">
+                        <h2 data-translate="title2">Blog</h2>
+                        <div style="display: flex;"><a href="./index.html">
+                                    <div class="blog">
+                                          <div>About me</div>
+                                    </div>
+                              </a>
+                              <select id="language-selector">
+                                    <option value="en">English</option>
+                                    <option value="vi">Tiếng Việt</option>
+                              </select>
+                        </div>
+
                   </div>
             </header>
-            <button id="scrollToTopBtn" title="Go to top">Top</button>
+            <button id="scrollToTopBtn" title="Go to top">
+                  <svg class="icon" viewBox="0 -5 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 4L6 10L7.41 11.41L12 6.83L16.59 11.41L18 10L12 4Z" fill="currentColor" />
+                  </svg>
+            </button>
            <main>
             <div class="nav"></div>
             <article><img src="images/fix.jpeg" alt=""> </article>
             <div class="sub"></div>
            </main>
-            <footer>
-                  <hr style="background-color:#6d6d6d; height: 2px;">
-                  <div class="contact">
-                        <div class="img-cute-boy"><img src="images/cuteboy.jpg" alt=""></div>
-                        <div class="contact-box">
-                              <p class="contact-box-title">Contact</p>
-                              <hr style="background-color:#6d6d6d; height: 1px;">
-                              <br>
-                              <div class="contact-box-info" id="email-address">
-                                    <img src="./images/email.png" alt="mail">
-                                    <div><a href="mailto:tranvannamntt@gmail.com" style=""> tranvannamntt@gmail.com</a>
-                                    </div>
-                              </div>
-                              <div class="contact-box-info">
-                                    <img src="./images/phone.png" alt="mail">
-                                    <p>Phone number </br>0366 187 296</p>
-                              </div>
-                              <div class="contact-box-info">
-                                    <img src="images/github.png" alt="mail">
-                                    <p>GitHub </br><a href="https://github.com/VanNamTran"
-                                                target="_blank">https://github.com/VanNamTran</a></p>
+           <footer>
+            <hr style="background-color:#6d6d6d; height: 2px;">
+            <div class="contact">
+                  <div class="img-cute-boy"><img src="images/cuteboy.jpg" alt=""></div>
+                  <div class="contact-box">
+                        <p data-translate="contact" class="contact-box-title"></p>
+                        <hr style="background-color:#6d6d6d; height: 1px;">
+                        <br>
+                        <div class="contact-box-info" id="email-address">
+                              <img src="./images/email.png" alt="mail">
+                              <div><a href="mailto:tranvannamntt@gmail.com"> tranvannamntt@gmail.com</a>
                               </div>
                         </div>
+                        <div class="contact-box-info">
+                              <img src="./images/phone.png" alt="mail">
+                              <p data-translate="phone"></p>
+                        </div>
+                        <div class="contact-box-info">
+                              <img src="images/github.png" alt="mail">
+                              <p>GitHub </br><a href="https://github.com/VanNamTran"
+                                          target="_blank">https://github.com/VanNamTran</a></p>
+                        </div>
                   </div>
-            </footer>
+            </div>
+      </footer>
       </div>
-      <script>
-            var modal = document.getElementById("myModal");
-            var img = document.getElementById("myImg");
-            var modalImg = document.getElementById("img01");
-            var captionText = document.getElementById("caption");
-            img.onclick = function () {
-                  modal.style.display = "block";
-                  modalImg.src = this.src;
-                  captionText.innerHTML = this.alt;
-            }
-            var span = document.getElementsByClassName("close")[0];
-            span.onclick = function () {
-                  modal.style.display = "none";
-            }
-
-            // =========Specialized_skills=========
-            document.addEventListener('DOMContentLoaded', function () {
-                  fetch('./data/specialized_skills.json')
-                        .then(response => response.json())
-                        .then(data => {
-                              const container = document.getElementById('data-specialized-skills');
-                              const template = document.getElementById('data-template');
-
-                              data.forEach(item => {
-                                    const clone = document.importNode(template.content, true);
-
-                                    // Set background image
-                                    clone.querySelector('.background-image img').src = `images/${item.image}`;
-                                    // Set name
-                                    clone.querySelector('.topic-name').textContent = item.name;
-
-
-                                    container.appendChild(clone);
-                              });
-                        })
-                        .catch(error => console.error('Error fetching data:', error));
-            });
-            //=====JavaScript cho nút Scroll to Top =====
-            var scrollToTopBtn = document.getElementById("scrollToTopBtn");
-            window.onscroll = function () { scrollFunction() };
-
-            function scrollFunction() {
-                  if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
-                        scrollToTopBtn.style.display = "block";
-                  } else {
-                        scrollToTopBtn.style.display = "none";
-                  }
-            }
-
-            scrollToTopBtn.onclick = function () {
-                  document.body.scrollTop = 0;
-                  document.documentElement.scrollTop = 0;
-            }
-            // youtube-player
-            var YTPlayerOverlay = document.querySelector(".youtube-player-overlay");
-            var YTLinks = document.querySelectorAll(".show-video");
-            var YTPlayerPupup = document.querySelector(".my-project-video iframe");
-            YTLinks.forEach((link) => {
-                  link.addEventListener("click", () => {
-                        YTPlayerOverlay.classList.add("active2");
-                        let videoLink = `https://www.youtube.com/embed/${link.dataset.link}`;
-                        YTPlayerPupup.src = videoLink;
-                  });
-            });
-            YTPlayerOverlay.addEventListener("click", () => {
-                  YTPlayerOverlay.classList.remove("active2");
-            })
-      </script>
+      <script src="js/translate.js"></script>
+      <script src="js/functions.js"></script>
 </body>
 
 </html>
