modified:   blog.html

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
       <div class="container">
             <header id="header">
                   <div class="header-container">
-                        <h2 data-translate="title2">Blog</h2>
+                        <h2 data-translate="title2"></h2>
                         <div style="display: flex;"><a href="./index.html">
                                     <div class="blog">
                                           <div>About me</div>
