modified:   to_cc_bcc_email_sending.html

--- a/to_cc_bcc_email_sending.html
+++ b/to_cc_bcc_email_sending.html
@@ -86,7 +86,7 @@
                                           <td data-translate="yes">Yes</td>
                                     </tr>
                                     <tr>
-                                          <td data-translate="yes">BCC</td>
+                                          <td >BCC</td>
                                           <td data-translate="yes">Yes</td>
                                           <td data-translate="yes">Yes</td>
                                           <td data-translate="no">No</td>
