modified:   blog.html 	modified:   css/cssblog.css 	modified:   index.html 	modified:   post2.html 	modified:   to_cc_bcc_email_sending.html

--- a/index.html
+++ b/index.html
@@ -245,8 +245,21 @@
                   </div>
             </footer>
       </div>
+
       <script src="js/translate.js"></script>
       <script src="js/functions.js"></script>
+      <!-- Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
+      <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                  dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "G-ZYLY56P7HP");
+      </script>
+      <!-- End Google Analytics -->
 </body>
 
 </html>
