--- a/blog.html
+++ b/blog.html
@@ -1,52 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/cssblog.css" />
+    <title>Tran Van Nam</title>
+  </head>
 
-<head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="css/cssblog.css">
-      <title>Tran Van Nam</title>
-</head>
+  <body>
+    <div class="container">
+      <div id="header2"></div>
+      <button id="scrollToTopBtn" title="Go to top">
+        <svg
+          class="icon"
+          viewBox="0 -5 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M12 4L6 10L7.41 11.41L12 6.83L16.59 11.41L18 10L12 4Z"
+            fill="currentColor"
+          />
+        </svg>
+      </button>
 
-<body>
-      <div class="container">
-            <div id="header2"></div>
-            <button id="scrollToTopBtn" title="Go to top">
-                  <svg class="icon" viewBox="0 -5 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M12 4L6 10L7.41 11.41L12 6.83L16.59 11.41L18 10L12 4Z" fill="currentColor" />
-                  </svg>
-            </button>
-
-            <div class="container-main">
-                  <div id="nav"></div>
-                  <main id="content">
-                        <div class="content">
-                              <h1 data-translate="blogWelcomeTitle"></h1>
-                              <h2 id="section1" data-translate="blogIntroduction">Introduction</h2>
-                              <p data-translate="blogWelcomeIntro1"></p>
-                              <p data-translate="blogWelcomeIntro2"></p>
-                              <p data-translate="blogWelcomeIntro3"></p>
-                              <p data-translate="blogWelcomeIntro4"></p>
-                              <img src="images/soldiers-8903095_1280.jpg" alt="">
-                              </div>
-                        <div class="catalog"> 
-                              <p style="font-size: 20px;font-weight: bold;margin: 0;" data-translate="TableOfContents">On this page</p>
-                              <hr>
-                              <ul>
-                                    <li><a href="#section1" data-translate="blogIntroduction"></a></li>
-                  
-                              </ul>
-                        </div>
-                  </main>
-
-            </div>
-            <div id="footer"></div>
+      <div class="container-main">
+        <div id="nav"></div>
+        <main id="content">
+          <div class="content">
+            <h1 data-translate="blogWelcomeTitle"></h1>
+            <h2 id="section1" data-translate="blogIntroduction">
+              Introduction
+            </h2>
+            <p data-translate="blogWelcomeIntro1"></p>
+            <p data-translate="blogWelcomeIntro2"></p>
+            <p data-translate="blogWelcomeIntro3"></p>
+            <p data-translate="blogWelcomeIntro4"></p>
+            <img src="images/soldiers-8903095_1280.jpg" alt="" />
+          </div>
+          <div class="catalog">
+            <p
+              style="font-size: 20px; font-weight: bold; margin: 0"
+              data-translate="TableOfContents"
+            >
+              On this page
+            </p>
+            <hr />
+            <ul>
+              <li>
+                <a href="#section1" data-translate="blogIntroduction"></a>
+              </li>
+            </ul>
+          </div>
+        </main>
       </div>
-      <script src="js/load-compoments.js"></script>
-      <script src="js/functions.js"></script>
-      <script src="js/translate.js"></script>
-      <script src="js/scroll-spy.js"></script>
-</body>
+      <div id="footer"></div>
+    </div>
 
+
+    <script src="js/load-compoments.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/translate.js"></script>
+    <script src="js/scroll-spy.js"></script>
+  </body>
 </html>
